# python_course_gr_D

./: LICENSE.txt  README.md  class_customer.ipynb  class_customer.py  index.html  py_proj_latest.ipynb  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
.ipynb_checkpoints/: class_customer-checkpoint.ipynb
docs/_build/html/: index.html
docs/source/: conf.py  index.rst  retail.rst
docs/source/example/: showcase.ipynb
docs/source/notebooks/: api.rst  conf.py  index.rst  notebook1.ipynb
docs/tests/: test_class_retail.py
functions/: custom_functions.py
notebooks/: api.rst  conf.py  index.rst
retail/: class_retail.py
retail.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_class_customer.py  test_class_retail.py  test_customer_class.py
