# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project]
name = "retail"
version = "0.0.1"
requires-python = ">=3.6"
dependencies = ["matplotlib>=3.8.3",
                "numpy>=1.24.3",
                "pandas>=1.5.3",
                "polars==0.20.16",
                "seaborn==0.13.2",
                "geopandas>=0.14.3" ]
dynamic = ['description', 'license', 'authors', 'classifiers']

[project.optional-dependencies]
dev = ["pytest ~= 7.1.2"]
