[metadata]
name = retail
description = Analysis of retail data
url = https://github.com/EmonaBakalova/Python_Project
author = Emona Bakalova, Mariia Hrechyn, Alican Ohkay
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0

[options]
python_requires = >=3.6
packages = retail
install_requires =
    numpy >= 1.23
    pandas >= 1.4
    polars >= 0.19.19
    pyarrow >= 11.0.0
    scipy >= 1.8
    seaborn >= 0.11
    matplotlib >= 3.5
    Requests >= 2.31.0

[options.extras_require]
testing =
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0

docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1